--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "requirejs": "~2.1.9",
     "requirejs-text": "~2.0.10",
     "jquery": "~2.0.3",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "backbone.localstorage": "~1.1.7"
   }
 }
