--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "requirejs-text": "~2.0.10",
     "jquery": "~2.0.3",
     "underscore": "~1.5.2",
-    "backbone.localstorage": "~1.1.7"
+    "backbone.localstorage": "~1.1.7",
+    "bootstrap": "~3.0.3",
+    "bootstrap-datepicker": "~1.2.0"
   }
 }
